force-app/main/default/objects/Torc_Referral_Status__c/Torc_Referral_Status__c.object-meta.xml
<CustomObject>
    <label>Torc Referral Status</label>
    <nameField>
        <label>Torc Referral Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torc Referral Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>