force-app/main/default/objects/Torc_Referral_Status__c/fields/createdAt__c.field-meta.xml
<CustomField>
    <fullName>createdAt__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>