force-app/main/default/objects/Torc_Referral_Status__c/fields/direct_copiedCount__c.field-meta.xml
<CustomField>
    <fullName>direct_copiedCount__c</fullName>
    <label>Direct copiedCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>