force-app/main/default/objects/Torc_Referral_Status__c/fields/email_copiedCount__c.field-meta.xml
<CustomField>
    <fullName>email_copiedCount__c</fullName>
    <label>email copiedCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>