force-app/main/default/objects/Torc_Referral_Status__c/fields/facebook_actualCount__c.field-meta.xml
<CustomField>
    <fullName>facebook_actualCount__c</fullName>
    <label>facebook actualCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>