force-app/main/default/objects/Torc_Referral_Status__c/fields/Identity_Username__c.field-meta.xml
<CustomField>
    <fullName>Identity_Username__c</fullName>
    <externalId>true</externalId>
    <label>Identity Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>