force-app/main/default/objects/Torc_Referral_Status__c/fields/profile_copiedCount__c.field-meta.xml
<CustomField>
    <fullName>profile_copiedCount__c</fullName>
    <label>profile copiedCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>