force-app/main/default/objects/Torc_Referral_Status__c/fields/twitter_actualCount__c.field-meta.xml
<CustomField>
    <fullName>twitter_actualCount__c</fullName>
    <label>twitter actualCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>