force-app/main/default/objects/Torc_Referral_Status__c/fields/whatsApp_actualCount__c.field-meta.xml
<CustomField>
    <fullName>whatsApp_actualCount__c</fullName>
    <label>WhatsApp actualCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>